--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peviitor_jsscraper",
-  "version": "0.1.5",
+  "version": "1.0.0",
   "description": "Lightweight library intended for scraping and interfacing with peviitor.ro",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/peviitor-ro/based_scraper_js#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "jsdom": "^22.1.0",
     "jssoup": "^0.0.15",
     "uuid": "^9.0.0"
   }
