--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "axios": "^1.4.0",
     "jsdom": "^22.1.0",
-    "jssoup": "^0.0.15",
-    "uuid": "^9.0.0"
+    "jssoup": "^0.0.15"
   }
 }
