--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peviitor_jsscraper",
-  "version": "1.0.3",
+  "version": "1.1.3",
   "description": "Lightweight library intended for scraping and interfacing with peviitor.ro",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "jsdom": "^22.1.0",
-    "jssoup": "^0.0.15"
+    "jssoup": "^0.0.15",
+    "dotenv": "^8.2.0"
   }
 }
